// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditMoal Component snapshots gradeOverrideHistoryError is and empty and open is true modal open and StatusAlert showing 1`] = `
<Modal
  body={
    <div>
      <ModalHeaders />
      <StatusAlert
        alertType="danger"
        dialog="Weve been trying to contact you regarding..."
        dismissible={false}
        open={true}
      />
      <OverrideTable />
      <div>
        Showing most recent actions (max 5). To see more, please contact support.
      </div>
      <div>
        Note: Once you save, your changes will be visible to students.
      </div>
    </div>
  }
  buttons={
    Array [
      <Button
        onClick={[MockFunction this.handleAdjustedGradeClick]}
        variant="primary"
      >
        Save Grade
      </Button>,
    ]
  }
  closeText="Cancel"
  onClose={[MockFunction this.closeAssignmentModal]}
  open={true}
  title="Edit Grades"
/>
`;

exports[`EditMoal Component snapshots gradeOverrideHistoryError is empty and open is false modal closed and StatusAlert closed 1`] = `
<Modal
  body={
    <div>
      <ModalHeaders />
      <StatusAlert
        alertType="danger"
        dialog=""
        dismissible={false}
        open={false}
      />
      <OverrideTable />
      <div>
        Showing most recent actions (max 5). To see more, please contact support.
      </div>
      <div>
        Note: Once you save, your changes will be visible to students.
      </div>
    </div>
  }
  buttons={
    Array [
      <Button
        onClick={[MockFunction this.handleAdjustedGradeClick]}
        variant="primary"
      >
        Save Grade
      </Button>,
    ]
  }
  closeText="Cancel"
  onClose={[MockFunction this.closeAssignmentModal]}
  open={false}
  title="Edit Grades"
/>
`;
